<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
       <LinearLayout
        android:background="@drawable/red_to_white_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" 
        android:orientation="vertical">
        
        <TextView 
            android:text="@string/akaTitle"
            style="@style/TextBlack"
            android:gravity="left"/>
        
        <TextView 
            android:text="@string/compFirstname"
            style="@style/TextBlack"
            android:gravity="left"/>
        
        <EditText 
            android:id="@+id/akaFirstname"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:inputType="text"/>
        
        <TextView 
            android:text="@string/compLastname"
            style="@style/TextBlack"
            android:gravity="left"/>
        
        <EditText 
            android:id="@+id/akaLastname"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:inputType="text"/>
        
        
    </LinearLayout>

    <LinearLayout 
        android:background="@drawable/only_white_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" 
        android:orientation="vertical">
        
        <TextView 
            android:text="@string/shiroTitle"
            style="@style/TextBlack"
            android:gravity="left"/>
        
        <TextView 
            android:text="@string/compFirstname"
            style="@style/TextBlack"
            android:gravity="left"/>
        
        <EditText 
            android:id="@+id/shiroFirstname"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:inputType="text"/>
        
        <TextView 
            android:text="@string/compLastname"
            style="@style/TextBlack"
            android:gravity="left"/>
        
        <EditText 
            android:id="@+id/shiroLastname"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent" 
            android:inputType="text"/> 
            
        <Button 
            android:id="@+id/btAddCompetitors"
            android:background="@drawable/blue_btn"
            style="@style/TextBlack"
            android:text="@string/startMatch"
            android:layout_width="fill_parent"/>
        
    </LinearLayout>

</LinearLayout>